# windows-troubleshooting-toolkit

./: .gitignore  LICENSE  README.md  launch_separate.py  pyproject.toml  requirements.txt
src/windows_troubleshooting_toolkit/: __init__.py  cli.py  gui.py
src/windows_troubleshooting_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/windows_troubleshooting_toolkit/commands/: __init__.py  audit.py  connectivity.py  disk_health.py  eventlogs.py  firewall.py  hardware.py  installed.py  network.py  performance.py  processes.py  report.py  security.py  services.py  startup.py  system.py  system_integrity.py  util.py
tests/: test_cli.py
